add section features

--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,11 @@
-:root {
-    --black: #18191F;
-}
+
 
 body {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: 'Manrope', sans-serif;
+    color: #18191F;
 }
 
 .container {
@@ -17,9 +16,12 @@ body {
 /* ----------------- header----------- */
 
 
-header {
+header {    
     background-image: url('../img/header_background.png');
     background-repeat: no-repeat;
+    background-position: center top;
+    
+    
 
 }
 
@@ -58,7 +60,7 @@ header {
     text-decoration: none;
     font-size: 14px;
     font-weight: 700;
-    color: var(--black);
+    color:#18191F;    
 }
 
 .nav__list-item:last-of-type {    
@@ -98,8 +100,7 @@ header {
 .inner__content-title {
     font-size: 72px;
     font-weight: 800;
-    line-height: 98px;
-    color: var(--black);
+    line-height: 98px;    
     margin-top: 72px;    
     margin-bottom: 32px;
 }
@@ -131,4 +132,77 @@ header {
     display: flex;
     justify-content: center;
     column-gap: 64px;
+}
+
+/* ------------ features ------------ */
+
+
+.features__list{
+    display: flex;
+    /* justify-content: center; */
+    flex-direction: column;
+    align-items: center;
+    padding-bottom: 64px;
+    
+}
+
+
+.features__title {
+    display: flex;    
+    flex-direction: column;
+    align-items: center;
+    padding-top: 64px;
+    padding-bottom: 48px;
+    
+    
+}
+
+.features__title-title {    
+    font-size: 48px;
+    line-height: 64px;
+    font-weight: 800;
+    margin-bottom: 8px;
+}
+
+.features__title-text {
+    text-align: center;
+    max-width: 540px;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 32px;
+    margin-top: 0;
+}
+
+.features__cards {
+    display: flex;
+    column-gap: 30px;
+    row-gap: 64px;
+    flex-wrap: wrap;
+}
+
+.card__item {
+    width: 350px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    
+}
+
+.card__item-img {
+    margin-bottom: 24px;
+}
+
+.card__item-title {
+    margin-top: 0;
+    margin-bottom: 8px;
+    font-size: 24px;
+    font-weight: 500; 
+    line-height: 32px;   
+}
+
+.card__item-text {
+    font-size: 16px;
+    line-height: 26px;
+    margin-top: 0;
+    text-align: center;
 }
