--- a/css/style.css
+++ b/css/style.css
@@ -206,3 +206,107 @@ header {
     margin-top: 0;
     text-align: center;
 }
+
+/* ---------- stories ----------- */
+
+
+.stories {
+    background-color: #D5FAFC;
+}
+
+.customers__stories {
+    padding-top: 120px;
+    padding-bottom: 80px;    
+    background-image: url('../img/Quote\ Mark.svg');
+    background-repeat: no-repeat;
+    background-position: 0 64px;
+    background-size: 143px 120px;
+    display: flex;    
+}
+
+
+.left__story {
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    
+}
+
+.customers__stories-title {
+    font-size: 48px;
+    font-weight: 800;
+    line-height: 64px;
+    margin-top: 0;
+    margin-bottom: 24px;
+    padding-left: 95px;
+}
+
+.customers__stories-text {
+    font-size: 18px;
+    line-height: 32px;
+    font-weight: 400;
+    
+}
+
+.story__item {
+    max-width: 350px;
+    background-color: #fff;
+    padding-top: 32px;
+    padding-left: 32px;
+    padding-bottom: 32px;
+    border-radius: 8px;
+    
+    
+}
+
+.second {
+    max-width: 445px;
+    margin-bottom: 32px;
+}
+
+.story__item-img {    
+    padding-bottom: 0;
+    margin: 0;
+}
+
+.story__item-text {
+    padding-left: 32px; 
+    padding-right: 32px;
+    padding-bottom: 24px;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 32px;
+    position: relative;
+    
+}
+
+.story__item-text::before {
+    content: "";
+    width: 16px;
+    height: 14px;
+    background-image: url('../img/QuoteMark_small.svg');
+    position: absolute;
+    left: 0;
+}
+
+.story__item-username {
+    padding-left: 32px;
+    font-size: 18px;
+    font-weight: 700;
+    margin: 0;
+}
+
+.story__item-userposition {
+    font-size: 14px;
+    font-weight: 500;
+    color: #969BAB;
+    padding-left: 32px;
+    
+}
+
+.right__story {
+    padding-top: 48px;
+    padding-left: 30px;
+}
+
