--- a/css/style.css
+++ b/css/style.css
@@ -230,6 +230,7 @@ header {
     display: flex;
     flex-direction: column;
     align-items: flex-end;
+    padding-right: 30px;
     
 }
 
@@ -256,6 +257,7 @@ header {
     padding-left: 32px;
     padding-bottom: 32px;
     border-radius: 8px;
+    box-shadow: 0px 10px 20px rgba(41, 41, 42, 0.07);
     
     
 }
@@ -307,6 +309,71 @@ header {
 
 .right__story {
     padding-top: 48px;
+    
+}
+
+
+
+/* ---------- achievements ---------- */
+
+
+.achievements {
+    padding: 80px 0;
+    display: flex;
+}
+
+
+.achievements__title {
+    width: 50%;
+}
+
+.achievements__title-title {
+    font-size: 48px;
+    font-weight: 800;
+    line-height: 64px;
+    margin-bottom: 0;
+    margin-top: 0;
+}
+
+
+.achievements-text {
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 32px;
+}
+
+.achievements__list {    
+    display: flex;
+    flex-wrap: wrap;
+    column-gap: 30px;
+    row-gap: 40px;
+    width: 50%;
     padding-left: 30px;
 }
 
+.achievements__item {
+    width: 255px;
+}
+
+.achievements__item-img {
+    margin-top: 17px;
+    margin-bottom: 17px;
+    margin-left: 8px;
+    margin-right: 24px;
+    float: left;
+
+}
+
+.achievements__item-title {
+    font-size: 28px;
+    font-weight: 800;
+    margin: 0;
+    
+}
+
+.achievements__item-subtitle {
+    font-size: 16px;
+    font-weight: 400;
+    margin: 0;
+    
+}
