--- a/css/style.css
+++ b/css/style.css
@@ -109,6 +109,7 @@ header {
     color: #fff;
     font-size: 20px;
     font-weight: 700;
+    font-family: 'Manrope', sans-serif;
     padding: 16px 41px;
     background-color: #8C30F5;
     border-radius: 8px;
@@ -407,14 +408,18 @@ header {
     font-weight: 400;
 }
 
+
 .headline__btn {
     color: #8C30F5;
     font-size: 20px;
     font-weight: 700;
-    text-decoration: none;    
+    font-family: 'Manrope', sans-serif;
+    padding: 0;
+    border: none;
+    outline: none;
+    background-color: #fff;
+    cursor: pointer;
     position: relative;
-    
-    
 }
 
 .headline__btn::after {
@@ -425,6 +430,5 @@ header {
     background-repeat: no-repeat;
     position: absolute;
     margin-left: 8px;
-    top: 3px;
-    
+    top: 3px;    
 }
