--- a/css/style.css
+++ b/css/style.css
@@ -48,11 +48,14 @@ header {
 
 .nav__list-item {
     margin-right: 32px;
-    transition: 0.3s;
+    transition: 0.2s;
+    /* padding-bottom: 3px; */
+    border-bottom: 2px solid transparent;    
 }
 
 .nav__list-item:hover {
-    text-decoration: underline;
+    /* text-decoration: underline; */
+    border-bottom: 2px solid #8C30F5;
     
 }
 
@@ -60,7 +63,8 @@ header {
     text-decoration: none;
     font-size: 14px;
     font-weight: 700;
-    color:#18191F;    
+    color:#18191F; 
+       
 }
 
 .nav__list-item:last-of-type {    
@@ -416,10 +420,16 @@ header {
     font-family: 'Manrope', sans-serif;
     padding: 0;
     border: none;
+    border-bottom: 2px solid transparent;
     outline: none;
     background-color: #fff;
     cursor: pointer;
     position: relative;
+    transition: 0.2s;
+}
+
+.headline__btn:hover {
+    border-bottom: 2px solid #8C30F5;
 }
 
 .headline__btn::after {
@@ -431,4 +441,34 @@ header {
     position: absolute;
     margin-left: 8px;
     top: 3px;    
+}
+
+/* ----------- trends ----------- */
+
+.trends__list {
+    display: flex;
+    padding-top: 64px;
+}
+
+.trends__item {
+    width: 50%;
+    column-gap: 30px;
+}
+
+.trends__title {
+    font-size: 40px;
+    font-weight: 800;
+    line-height: 54px;
+    margin-top: 0;
+}
+
+.trends__text {
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 32px;
+    margin-top: 0;
+}
+
+.trends__img {
+    padding-bottom: 64px;
 }
