--- a/css/style.css
+++ b/css/style.css
@@ -530,3 +530,85 @@ header {
 .img__bottom {          
     margin-bottom: -67px;    
 }
+
+/* ------------ footer ----------- */
+
+
+footer {
+    background-color: #0B0D17;
+    padding: 56px 0;
+}
+
+.footer__block {
+    display: flex;
+    justify-content: space-between;
+}
+
+.logo {
+    margin-bottom: 24px;
+}
+
+.menu__link {
+    color: #fff;
+    text-decoration: none;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 26px;    
+    margin-right: 24px;
+    margin-bottom: 12px;
+}
+
+.menu__link:hover {
+    text-decoration: underline;
+}
+
+.menu__list {
+    list-style: none;
+    display: flex;
+    padding: 0;
+}
+
+.menu__list li {
+    margin-right: 24px;
+}
+
+.menu__list li a {
+    text-decoration: none;
+    color: #fff;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 26px;
+
+}
+
+.menu__list li a:hover {
+    text-decoration: underline;
+}
+
+.copyright {
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 24px;
+    color: #D9DBE1;
+}
+
+.block__app {    
+    display: flex;
+    flex-direction: column;
+    padding-right: 24px;
+}
+
+.block__app p {
+    color: #D9DBE1;
+    font-size: 18px;
+    font-weight: 500;
+    line-height: 28px;
+    margin-top: 0;
+    margin-bottom: 16px;
+
+}
+
+.block__app a {      
+    margin-bottom: 16px;
+    margin-right: 24px;
+}
